<resources>
    <string name="app_name">ZDS Demo</string>
    <string name="menu_action_theme">Change Theme</string>
    <string name="action_buttons">Buttons</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="action_icon_buttons">Icon Buttons</string>
    <string name="action_fab">FAB</string>
    <string name="action_text_input">Text Input</string>
    <string name="action_switch">Switch</string>
    <string name="action_radio">Radio Buttons</string>
    <string name="action_checkbox">Checkbox</string>
    <string name="action_progress_indicators">Progress Indicators</string>
    <string name="menu_action_favorite">Favorite</string>
    <string name="action_toolbar">Toolbar</string>
    <string name="menu_action_delete">Delete</string>
    <string name="menu_action_search">Search</string>
    <string name="action_tabs">Tabs</string>
    <string name="action_lists">Lists</string>
    <string name="action_dialogs">Dialogs</string>
    <string name="action_dropdown">Dropdown</string>
    <string name="action_search">Search</string>
    <string name="action_snackbar">Snackbar</string>
    <string name="action_banner">Banner</string>
    <string name="action_select_input">Select input</string>
</resources>
